--- a/i18n/mk.po
+++ b/i18n/mk.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 22:03+0000\n"
-"PO-Revision-Date: 2019-06-18 00:06+0200\n"
+"POT-Creation-Date: 2019-07-09 05:10+0000\n"
+"PO-Revision-Date: 2019-07-09 07:16+0200\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -310,11 +310,9 @@ msgid ""
 "                    </tr>\n"
 "                </table>\n"
 "            </div>\n"
-"            <div style=\"height: auto;width:700px; margin:0 auto;padding-top:20px;padding-bottom:40px;\">\n"
-"                <a style=\"padding: 8px 30px 8px 30px;border-radius: 6px;border: 1px solid #CCCCCC;background:#8A89BA;margin : 0 15px 0 0;text-decoration: none;color:#FFFFFF;\" href=\"/calendar/meeting/accept?db=${'dbname' in ctx and ctx['dbname'] or ''}&token=${object.access_token}&action=${'action_id' in ctx and ctx['action_id'] or ''}&id=${object.event_id.id}\">Прифати</a>\n"
-"                <a style=\"padding: 8px 30px 8px 30px;border-radius: 6px;border: 1px solid #CCCCCC;background:#808080;margin : 0 15px 0 0;text-decoration: none;color:#FFFFFF;\" href=\"/calendar/meeting/decline?db=${'dbname' in ctx and ctx['dbname'] or '' }&token=${object.access_token}&action=${'action_id' in ctx and ctx['action_id'] or ''}&id=${object.event_id.id}\">Одбиј</a>\n"
-"                <a style=\"padding: 8px 30px 8px 30px;border-radius: 6px;border: 1px solid #CCCCCC;background:#D8D8D8;text-decoration: none;color:#FFFFFF;\" href=\"/calendar/meeting/view?db=${'dbname' in ctx and ctx['dbname'] or ''}&token=${object.access_token}&action=${'action_id' in ctx and ctx['action_id'] or ''}&id=${object.event_id.id}\">Погледни детали за состанокот</a>\n"
-"            </div> \n"
+"            <div style=\"height: 50px;text-align: left;font-size : 14px;border-collapse: separate;margin-top:10px\">\n"
+"                <p>Ве молиме да го потврдите Вашето присуство со одговор на овој меил.</p> \n"
+"            </div>\n"
 "        </div>\n"
 "    </body>\n"
 "</html>\n"
@@ -395,11 +393,9 @@ msgstr ""
 "                    </tr>\n"
 "                </table>\n"
 "            </div>\n"
-"            <div style=\"height: auto;width:700px; margin:0 auto;padding-top:20px;padding-bottom:40px;\">\n"
-"                <a style=\"padding: 8px 30px 8px 30px;border-radius: 6px;border: 1px solid #CCCCCC;background:#8A89BA;margin : 0 15px 0 0;text-decoration: none;color:#FFFFFF;\" href=\"/calendar/meeting/accept?db=${'dbname' in ctx and ctx['dbname'] or ''}&token=${object.access_token}&action=${'action_id' in ctx and ctx['action_id'] or ''}&id=${object.event_id.id}\">Прифати</a>\n"
-"                <a style=\"padding: 8px 30px 8px 30px;border-radius: 6px;border: 1px solid #CCCCCC;background:#808080;margin : 0 15px 0 0;text-decoration: none;color:#FFFFFF;\" href=\"/calendar/meeting/decline?db=${'dbname' in ctx and ctx['dbname'] or '' }&token=${object.access_token}&action=${'action_id' in ctx and ctx['action_id'] or ''}&id=${object.event_id.id}\">Одбиј</a>\n"
-"                <a style=\"padding: 8px 30px 8px 30px;border-radius: 6px;border: 1px solid #CCCCCC;background:#D8D8D8;text-decoration: none;color:#FFFFFF;\" href=\"/calendar/meeting/view?db=${'dbname' in ctx and ctx['dbname'] or ''}&token=${object.access_token}&action=${'action_id' in ctx and ctx['action_id'] or ''}&id=${object.event_id.id}\">Погледни детали за состанокот</a>\n"
-"            </div> \n"
+"            <div style=\"height: 50px;text-align: left;font-size : 14px;border-collapse: separate;margin-top:10px\">\n"
+"                <p>Ве молиме да го потврдите Вашето присуство со одговор на овој меил.</p> \n"
+"            </div>\n"
 "        </div>\n"
 "    </body>\n"
 "</html>\n"
@@ -507,25 +503,25 @@ msgstr ""
 "<p>Почитувани, </p>\n"
 "<p>Вашата компанија е корисник на нашата платформа за бизнис информации, БизнисМрежа.мк и во моментов има активна претплата за користење на истата. </p>\n"
 "<p>\n"
-"Со овој меил би сакале да Ве информираме дека Вашиот договор истекува на&nbsp;${object.date and object.date.split('-')[1] + '/' + object.date.split('-')[2] + '/' + object.date.split('-')[0] or ''},&nbsp;\n"
+"Со овој меил би сакале да Ве информираме дека Вашиот договор истекува на ${object.date and object.date.split('-')[2] + '/' + object.date.split('-')[1] + '/' + object.date.split('-')[0] or ''}, \n"
 "односно Ви преостануваат уште 2 (два) месеци за користење на споменатата услуга.\n"
 "</p>\n"
 "<p>\n"
 "За дополнителни прашања Ви стоиме на располагање.\n"
 "</p>\n"
 "<p class=\"text-muted\">\n"
-"    <span>Со почит, </span><br>\n"
-"    <b style=\"color: red;\">ТАРГЕТ ГРУП ДОО Скопје</b><br>\n"
-"    <span>Ул. Кеј Димитар Влахов бр. 3-1/1/3</span><br>\n"
-"    <span>1000 Скопје, Р. Македонија</span><br>\n"
-"    <span>Тел/Факс: +389 (2) 3117 100</span><br>\n"
-"    <span>Е-маил: </span><a href=\"mailto:info@targetgroup.mk\">info@targetgroup.mk</a><br>\n"
+"    <span>Со почит, </span><br/>\n"
+"    <b style=\"color: red;\">ТАРГЕТ ГРУП ДОО Скопје</b><br/>\n"
+"    <span>ул. Кеј Димитар Влахов бр. 3-1/1/3</span><br/>\n"
+"    <span>1000 Скопје, Р. Македонија</span><br/>\n"
+"    <span>Тел/Факс: +389 (2) 3117 100</span><br/>\n"
+"    <span>Е-маил: </span><a href=\"mailto:info@targetgroup.mk\">info@targetgroup.mk</a><br/>\n"
 "    <a href=\"http://targetgroup.mk/\">www.targetgroup.mk</a>\n"
 "</p>\n"
 "<p>\n"
-"    <b style=\"color: red;\"><i>Успех е да се биде во тек со промените</i></b><br>\n"
+"    <b style=\"color: red;\"><i>Успех е да се биде во тек со промените</i></b><br/>\n"
 "    <a href=\"http://targetgroup.mk/\">\n"
-"      <img src=\"/target_features/static/src/img/logo.jpg\" style=\"max-width: 156px;\">\n"
+"      <img src=\"http://targetgroup.mk/wp-content/uploads/2019/03/logo.jpg\" style=\"max-width: 156px;\"/>\n"
 "    </a>\n"
 "</p>\n"
 "                \n"
@@ -859,7 +855,7 @@ msgid "Cancel Email"
 msgstr "Откажи Email"
 
 #. module: target_features
-#: code:addons/target_features/models/account_invoice.py:58
+#: code:addons/target_features/models/account_invoice.py:59
 #, python-format
 msgid ""
 "Cannot find a chart of accounts for this company, You should configure it. \n"
@@ -875,8 +871,8 @@ msgid "Compose Email"
 msgstr "Креирај Email"
 
 #. module: target_features
-#: code:addons/target_features/models/account_invoice.py:108
-#: code:addons/target_features/models/account_invoice.py:112
+#: code:addons/target_features/models/account_invoice.py:129
+#: code:addons/target_features/models/account_invoice.py:133
 #, python-format
 msgid "Configuration Error!"
 msgstr "Грешка при конфигурација!"
@@ -973,7 +969,7 @@ msgstr "Е-пошти"
 #: code:addons/target_features/models/sale_order.py:77
 #, python-format
 msgid "Error!"
-msgstr "Грешка!"
+msgstr "Error!"
 
 #. module: target_features
 #: field:account.analytic.account,expiration_sent_1:0
@@ -1011,7 +1007,7 @@ msgid "For smart business decisions"
 msgstr "За паметни деловни одлуки"
 
 #. module: target_features
-#: code:addons/target_features/models/account_invoice.py:59
+#: code:addons/target_features/models/account_invoice.py:60
 #, python-format
 msgid "Go to the configuration panel"
 msgstr "Оди во конфигурациски панел"
@@ -1045,7 +1041,7 @@ msgid "Import Leads Wizard"
 msgstr "Импортирање на Траги"
 
 #. module: target_features
-#: code:addons/target_features/models/account_invoice.py:118
+#: code:addons/target_features/models/account_invoice.py:139
 #, python-format
 msgid "Incorrect Data"
 msgstr "Погрешни податоци"
@@ -1055,6 +1051,11 @@ msgstr "Погрешни податоци"
 #: view:website:target_features.report_invoice_target_document
 msgid "Invoice"
 msgstr "Фактура"
+
+#. module: target_features
+#: model:ir.model,name:target_features.model_account_invoice_line
+msgid "Invoice Line"
+msgstr "Ставка од фактура"
 
 #. module: target_features
 #: view:account.analytic.account:target_features.view_contract_target_form
@@ -1229,6 +1230,11 @@ msgid "Pro-Forma"
 msgstr "Профактура"
 
 #. module: target_features
+#: model:ir.model,name:target_features.model_account_proforma_invoice_line
+msgid "Pro-Forma Line"
+msgstr "Ставка од профактура"
+
+#. module: target_features
 #: view:website:target_features.report_saleorder_target_document_2
 msgid "Quantity"
 msgstr "Количина"
@@ -1346,19 +1352,19 @@ msgstr ""
 "%s"
 
 #. module: target_features
-#: code:addons/target_features/models/account_invoice.py:119
+#: code:addons/target_features/models/account_invoice.py:140
 #, python-format
 msgid "The value of Advance Amount must be positive."
 msgstr "Вредноста на износот мора да биде позитивна."
 
 #. module: target_features
-#: code:addons/target_features/models/account_invoice.py:109
+#: code:addons/target_features/models/account_invoice.py:130
 #, python-format
 msgid "There is no income account defined as global property."
 msgstr "Не е дефинирана влезна сметка."
 
 #. module: target_features
-#: code:addons/target_features/models/account_invoice.py:113
+#: code:addons/target_features/models/account_invoice.py:134
 #, python-format
 msgid "There is no income account defined for this product: \"%s\" (id:%d)."
 msgstr "Не е дефинирана влезна сметка за производот: \"%s\" (id:%d)."
@@ -1394,6 +1400,8 @@ msgid "Type of User"
 msgstr "Тип на корисник"
 
 #. module: target_features
+#: field:account.invoice.line,price_unit_cp:0
+#: field:account.proforma.invoice.line,price_unit_cp:0
 #: view:website:target_features.report_saleorder_target_document_2
 msgid "Unit Price"
 msgstr "Единечна цена"
@@ -1504,6 +1512,11 @@ msgstr "target_features.role_target_accountant_res_groups"
 #: view:account.invoice:target_features.view_account_invoice_target_form
 msgid "target_features.role_target_accountant_res_groups,target_features.role_target_manager_res_groups"
 msgstr "target_features.role_target_accountant_res_groups,target_features.role_target_manager_res_groups"
+
+#. module: target_features
+#: view:res.partner:target_features.view_res_partner_target_form
+msgid "{'default_parent_id': active_id, 'default_street': street, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_supplier': supplier, 'default_customer': customer, 'default_use_parent_address': True, 'default_is_company': False}"
+msgstr "{'default_parent_id': active_id, 'default_street': street, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_supplier': supplier, 'default_customer': customer, 'default_use_parent_address': True, 'default_is_company': False}"
 
 #. module: target_features
 #: view:sale.order:target_features.view_sale_order_proforma_target_form
