--- a/i18n/mk.po
+++ b/i18n/mk.po
@@ -608,8 +608,8 @@ msgid ""
 "<p>Ве молиме детално да ги прочитате општите услови за користење на БизнисМрежа и да не известите дали се согласувате со истите во рок од 5 работни дена. Доколку не добиеме повратен одговор во рок од 5 работни дена, ќе сметаме дека целосно се согласувате и ги прифаќате општите услови. </p>\n"
 "<p>За било какви прашања околу апликацијата контактирајте го вашиот личен советник. </p>\n"
 "<p>\n"
-"    <span>Ваш советник: </span><b>Елена Цветкова</b><br/>\n"
-"    <span>Телефон: </span><b>076/265-661</b><br/>\n"
+"    <span>Ваш советник: </span><b>${user.name or ''}</b><br/>\n"
+"    <span>Телефон: </span><b>${user.partner_id.mobile or user.partner_id.phone or ''}</b><br/>\n"
 "    <span>Е-пошта: </span><a href=\"mailto:support@targetgroup.mk\">support@targetgroup.mk</a>\n"
 "</p>\n"
 "<p class=\"text-muted\">\n"
@@ -653,8 +653,8 @@ msgstr ""
 "<p>Ве молиме детално да ги прочитате општите услови за користење на БизнисМрежа и да не известите дали се согласувате со истите во рок од 5 работни дена. Доколку не добиеме повратен одговор во рок од 5 работни дена, ќе сметаме дека целосно се согласувате и ги прифаќате општите услови. </p>\n"
 "<p>За било какви прашања околу апликацијата контактирајте го вашиот личен советник. </p>\n"
 "<p>\n"
-"    <span>Ваш советник: </span><b>Елена Цветкова</b><br/>\n"
-"    <span>Телефон: </span><b>076/265-661</b><br/>\n"
+"    <span>Ваш советник: </span><b>${user.name or ''}</b><br/>\n"
+"    <span>Телефон: </span><b>${user.partner_id.mobile or user.partner_id.phone or ''}</b><br/>\n"
 "    <span>Е-пошта: </span><a href=\"mailto:support@targetgroup.mk\">support@targetgroup.mk</a>\n"
 "</p>\n"
 "<p class=\"text-muted\">\n"
@@ -701,8 +701,8 @@ msgid ""
 "<p>Ве молиме детално да ги прочитате општите услови за користење на БизнисМрежа и да не известите дали се согласувате со истите во рок од 5 работни дена. Доколку не добиеме повратен одговор во рок од 5 работни дена, ќе сметаме дека целосно се согласувате и ги прифаќате општите услови. </p>\n"
 "<p>За било какви прашања околу апликацијата контактирајте го вашиот личен советник. </p>\n"
 "<p>\n"
-"    <span>Ваш советник: </span><b>Фросина Мирчески</b><br/>\n"
-"    <span>Телефон: </span><b>071/397-498</b><br/>\n"
+"    <span>Ваш советник: </span><b>${user.name or ''}</b><br/>\n"
+"    <span>Телефон: </span><b>${user.partner_id.mobile or user.partner_id.phone or ''}</b><br/>\n"
 "    <span>Е-пошта: </span><a href=\"mailto:support@targetgroup.mk\">support@targetgroup.mk</a>\n"
 "</p>\n"
 "<p class=\"text-muted\">\n"
@@ -746,8 +746,8 @@ msgstr ""
 "<p>Ве молиме детално да ги прочитате општите услови за користење на БизнисМрежа и да не известите дали се согласувате со истите во рок од 5 работни дена. Доколку не добиеме повратен одговор во рок од 5 работни дена, ќе сметаме дека целосно се согласувате и ги прифаќате општите услови. </p>\n"
 "<p>За било какви прашања околу апликацијата контактирајте го вашиот личен советник. </p>\n"
 "<p>\n"
-"    <span>Ваш советник: </span><b>Фросина Мирчески</b><br/>\n"
-"    <span>Телефон: </span><b>071/397-498</b><br/>\n"
+"    <span>Ваш советник: </span><b>${user.name or ''}</b><br/>\n"
+"    <span>Телефон: </span><b>${user.partner_id.mobile or user.partner_id.phone or ''}</b><br/>\n"
 "    <span>Е-пошта: </span><a href=\"mailto:support@targetgroup.mk\">support@targetgroup.mk</a>\n"
 "</p>\n"
 "<p class=\"text-muted\">\n"
